Fixed <body> overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,14 @@
 #root {
   width: 100%;
-  height: 100%;
-  margin: 0.5em;
+  margin: 0em;
   padding: 0em;
   text-align: center;
-  align-items: center;
 }
 
 .container
 {
-  width: fit-content;
-  margin: 0 auto;
+  max-width: 720px;
+  margin: 0;
 }
 
 .credit
